<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/modifyQuarters_linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/Player_textViewDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/defaultText"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/Player_textViewPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/textPlayerName"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/Player_editTextPlayerName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/hintName"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Player_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/modifyQuarters_linearLayout0">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/Player_textViewPlayerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/textPlayerNumber"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/Player_editTextPlayerNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/hintNumber"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Player_linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Player_linearLayout1"
        android:layout_above="@+id/Player_linearLayout3"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/Player_textViewPlayerPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/textPlayerHeader"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Player_checkBoxGoalie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/abbGoalie"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <NumberPicker
                    android:id="@+id/Player_numberPickerGoalie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Player_checkBoxDefender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/abbDefender"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/Player_numberPickerDefender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Player_checkBoxMidfielder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/abbMidfielder"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/Player_numberPickerMidfielder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Player_checkBoxForward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/abbForward"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <NumberPicker
                    android:id="@+id/Player_numberPickerForward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Player_linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Player_buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textCancel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/Player_buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textSave" />

    </LinearLayout>

</RelativeLayout>